--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+body, td, div, a {
+  font-family: sans-serif;
+}
+
 body {
   border: 0px;
   margin: 0px;
@@ -5,37 +9,77 @@ body {
   background-image: url(bk.png);
 }
 
+.blockMsg {
+  border-radius: 8px !important;
+  border: 3px solid #174f75 !important;
+  background-color: #0f263d !important;
+  color: #ffffff !important;
+  text-shadow: 1px 1px 1px #929da7 !important;
+}
+
 #toolbar {
-  width: 1010px;
+  width: 1000px;
   height: 78px;
   background-color: #436d90;
   border: 0px;
   border-radius: 8px;
   margin: 0px auto;
   padding: 0px;
-  opacity: 0.9;
+  -webkit-box-shadow: 0px 2px 2px black;
 }
 
 #logo {
   border: 0px;
   padding: 0px;
-  margin: -6px 0px 0px 356px;
+  margin: -6px 0px 0px 352px;
   position: absolute; 
+  -webkit-box-shadow: 0px 5px 5px black;
+}
+
+#photo {
+  position: absolute; 
+  border: 2px solid black;
+  padding: 0px;
+  width: 60px;
+  height: 60px;
+  z-index: 10;
+  display: none;
+  border-radius: 2px;
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
+.msg {
+  padding: 0px;
+  color: #ffffff;
+  text-shadow: 1px 1px 1px #929da7;
+}
+
+#nick {
+  margin-left: 80px;
+  position: absolute; 
+  margin-top: 28px;
+  display: none;
+}
+
+#money {
+  margin-left: 80px;
+  position: absolute; 
+  margin-top: 54px;
+  display: none;
 }
 
 #title{
   position: absolute; 
-  width: 1010px;
+  width: 1000px;
   height: 17px;
   background-color: #365778;
   border: 0px;
   -webkit-border-top-left-radius: 8px;
   -webkit-border-top-right-radius: 8px;
-  opacity: 0.9;
 }
 
 #content {
-  width: 1010px;
-  height: 576px;
+  width: 1000px;
   margin: 0 auto;
 }
