重新组织index.js代码结构，并解决hall中游戏列表的宽度BUG

--- a/css/index.css
+++ b/css/index.css
@@ -210,6 +210,13 @@ div.fht-tbody {
   background-color: #d0d2d3;
 }
 
+.col_longest {
+  width: 180px;
+}
+
+.col_short {
+  width: 90px;
+}
 
 .selected {
   background-color: #bab1c6 !important;
