对座位坐标进行调整 并重构了hall的一些代码

--- a/css/index.css
+++ b/css/index.css
@@ -218,6 +218,17 @@ div.fht-tbody {
   width: 90px;
 }
 
+.seat > .inplay,
+.seat > .nick {
+  color: white;
+  text-align: center;
+}
+
+.seat > .photo {
+  -webkit-box-shadow: 1px 3px 3px black;
+}
+
+
 .selected {
   background-color: #bab1c6 !important;
 }
