--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body, td, div, a {
-  font-family: sans-serif;
+  font-family: 'Microsoft Yahei','simhei',sans-serif;
   -webkit-user-select: none;
 }
 
@@ -268,6 +268,9 @@ div.fht-tbody {
   position: absolute;
 }
 
+button {
+  font-family: 'Microsoft Yahei','simhei',sans-serif;
+}
 #hall button {
   font-size: 17px;
   display: block;
