添加betting的相对位置，并添加对应的RAISE协议。

--- a/css/index.css
+++ b/css/index.css
@@ -375,3 +375,11 @@ button {
 
 #game_table {
 }
+
+.blind {
+  background-color: #77B73E;
+  position: absolute;
+  font-size: 12px;
+  border-radius: 20px;
+  width: 35px;
+}
