锁定用户拖拽图像，更好的用户体验。

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 body, td, div, a, img {
   font-family: 'Microsoft Yahei','simhei',sans-serif;
   -webkit-user-select: none;
+  -webkit-user-drag: none;
 }
 
 body {
