--- a/css/index.css
+++ b/css/index.css
@@ -272,6 +272,7 @@ div.fht-tbody {
 button {
   font-family: 'Microsoft Yahei','simhei',sans-serif;
 }
+
 #hall button {
   font-size: 17px;
   display: block;
@@ -304,13 +305,26 @@ button {
 
 #game_commands {
   position: absolute;
-  top: 500px;
+  top: 550px;
   left: 125px;
 }
 
-#game button {
-  width: 100px;
+.button {
+  background-image: url(button.png);
+  display: block;
+  width: 70px;
   height: 30px;
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
+  color: white;
+  font-size: 13px;
+  float: left;
+  padding-top: 16px;
+  padding-left: 48px;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  margin-left: 10px;
 }
 
 #room_commands {
@@ -391,7 +405,7 @@ button {
   border-top: 0px;
 }
 
-.button {
+.dealer {
   position: absolute;
   top: 70px;
   left: 60px;
@@ -482,4 +496,23 @@ button {
   position: absolute;
   top: 490px;
   left: 370px;
+}
+
+#raise_range {
+  position: absolute;
+  left: 520px;
+  top: 32px;
+}
+
+#raise_number {
+  position: absolute;
+  left: 525px;
+  top: 5px;
+  width: 118px;
+  height: 22px;
+  font-size: 15px;
+}
+
+.disabled {
+  opacity: 0.7;
 }
