--- a/css/index.css
+++ b/css/index.css
@@ -516,3 +516,13 @@ button {
 .disabled {
   opacity: 0.7;
 }
+
+#winner {
+  background-image: url('winner.png');
+  width: 64px;
+  height: 64px;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: -35px;
+  left: -20px;
+}
