添加对登陆的支持

--- a/src/index.haml
+++ b/src/index.haml
@@ -39,10 +39,10 @@
         #singin
           %form{:method => 'post'}
             %label 帳號
-            %input#txt_usr{:placeholder => '請輸入您的帳號'}
+            %input#txt_identity{:placeholder => '請輸入您的帳號'}
             %br/
             %label 密碼
-            %input#txt_pwd{:placeholder => '請輸入您的密碼', :type => 'password'}
+            %input#txt_password{:placeholder => '請輸入您的密碼', :type => 'password'}
             %br/
             %div
               %input#ckb_save{:type => 'checkbox', :checked => 'checked'} 存儲帳號信息
