--- a/css/index.css
+++ b/css/index.css
@@ -42,11 +42,13 @@ body {
   -webkit-border-top-right-radius: 8px; }
 
 #tools {
-  position: relative;
+  position: absolute;
+  display: none;
   padding: 0px;
-  top: -72px;
-  left: 698px;
-  width: 215px; }
+  top: 5px;
+  left: 710px;
+  width: 215px;
+}
 
 #tools > * {
   background: url(icon.png);
